--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-   "name": "shopinc-server",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "scripts": {
-      "build": "tsc",
-      "serve": "node ./build/index.js",
-      "start": "nodemon --exec ts-node src/index.ts"
-   },
-   "dependencies": {
-      "bcrypt": "^3.0.4",
-      "body-parser": "^1.18.3",
-      "cors": "^2.8.5",
-      "express": "^4.16.4",
-      "morgan": "^1.9.1",
-      "nodemon": "^1.18.10",
-      "pg": "^7.8.0",
-      "reflect-metadata": "^0.1.10",
-      "ts-node": "^8.0.2",
-      "tslint": "^5.12.1",
-      "typeorm": "0.2.12"
-   },
-   "devDependencies": {
-      "@types/bcrypt": "^3.0.0",
-      "@types/body-parser": "^1.17.0",
-      "@types/cors": "^2.8.4",
-      "@types/es6-promise": "^3.3.0",
-      "@types/express": "^4.16.1",
-      "@types/morgan": "^1.7.35",
-      "@types/node": "^8.0.29",
-      "@types/pg": "^7.4.11",
-      "typescript": "2.5.2"
-   }
+  "name": "shopinc-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "serve": "node ./build/index.js",
+    "start": "nodemon --exec ts-node src/index.ts",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+  },
+  "dependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "mocha": "^5.2.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
+    "pg": "^7.8.0",
+    "reflect-metadata": "^0.1.10",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typeorm": "0.2.12"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/es6-promise": "^3.3.0",
+    "@types/express": "^4.16.1",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^8.0.29",
+    "@types/pg": "^7.4.11",
+    "typescript": "2.5.2"
+  }
 }
